# scpa_Ax

./: .gitignore  Makefile  README.md  addMatrices.sh  profile_cudaHll.ncu-rep  test.py  zero_matrix.txt
lib/cuda/: cudaHll.cu  cudaMem.h  kernels.h
lib/mat/: CMakeLists.txt  csr.c  cuda_alex.cu  cuda_alex.h  cuda_luca.cu  cuda_luca.h  hll.c  matriciOpp.c  matriciOpp.h  random_vector.c  stats.h
lib/test/: CMakeLists.txt  test.c  test.h
result/: cudaPerf.py  graph1.py  plot.ipynb
tests/cmake/: CMakeLists.txt  main.c
tests/csrMultiplication/: CMakeLists.txt  main.c
tests/cudaHello/: CMakeLists.txt  a.out  main.cu
tests/cudaHll/: CMakeLists.txt  main.cu
tests/cudaTest/: CMakeLists.txt  main.cu
tests/open_hll/: CMakeLists.txt  convertHllMain.c
tests/open_matrici/: CMakeLists.txt  apriMatrice.c
tests/personaleTests/: CMakeLists.txt  a.out  checkspecs.cu  costant  costantMem.cu  main
tests/saveStats/: CMakeLists.txt  main.c  mainOld.c
